# PathTracer

./: CMakeLists.txt  CMakeSettings.json  README.md
PathTracer/: CMakeLists.txt  MainPathTracer.cpp  MainPathTracer.h  PathTracer.cpp  PathTracer.h
PathTracer/Concurrency/: BoundedQueue.cpp  BoundedQueue.h  ConcurrentBoundedQueue.cpp  ConcurrentBoundedQueue.h  Semaphore.cpp  Semaphore.h
PathTracer/DataTypes/: Camera.cpp  Camera.h  Cylinder.h  Image.cpp  Image.h  Material.cpp  Material.h  Plane.h  PointLight.h  Quad.h  Shape.h  Sphere.h  Texture.cpp  Texture.h  Vector3.cpp  Vector3.h
PathTracer/Geometry/: Cylinder.h  Plane.h  Quad.h  Shape.h  Sphere.h
PathTracer/Misc/: CommonDefines.h  Transform.cpp  Transform.h
PathTracer/Scenes/: PrebakedScenes.h
PathTracer/Textures/: barrel.ppm  columna_doom.ppm  comp_doom.ppm  flat_blue.ppm  hemiesfera.ppm  mario_flag.ppm  pared_doom.ppm  suelo_doom.ppm  techo_doom.ppm
PathTracer/Tracer/: PathTracer.cpp  PathTracer.h
